--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    implementation 'commons-codec:commons-codec:1.15'
+    implementation 'com.devskiller.friendly-id:friendly-id-spring-boot-starter:1.1.0'
 }
 
 test {
